@@ -3455,7 +3455,7 @@ CMD(cvs_import, N_("rcs"), N_("CVSROOT"), N_("import all versions in CVS reposit
   if (args.size() != 1)
     throw usage(name);
 
-  import_cvs_repo(mkpath(idx(args, 0)()), app);
+  import_cvs_repo(system_path(idx(args, 0)), app);
 }
 
 CMD(git_import, "git", "GITREPO", "import given head from GIT repository",
@@ -3464,7 +3464,7 @@ CMD(git_import, "git", "GITREPO", "import given head from GIT repository",
   if (args.size() != 1)
     throw usage(name);
 
-  import_git_repo(mkpath(idx(args, 0)()), app);
+  import_git_repo(system_path(idx(args, 0)), app);
 }
 
 static void
