@@ -96,9 +96,16 @@ void walk_tree(file_path const & path,
                bool require_existing_path = true);
 
 // from anywhere, with native path
+class absolute_tree_walker
+{
+public:
+  virtual void visit_file(system_path const & path) = 0;
+  virtual ~absolute_tree_walker();
+}
+
 void
-walk_tree_absolute(fs::path const & path,
-		   tree_walker & walker);
+walk_tree_absolute(system_path const & path,
+                   absolute_tree_walker & walker);
 
 
 
