@@ -1,3 +1,11 @@
+2005-08-30  Nathaniel Smith  <njs@pobox.com>
+
+	* commands.cc (cvs_import, git_import): Fixup after merge.
+	* git.hh (import_git_repo): Port to paths.cc.
+	* git.cc: Port to paths.cc generally.
+	* file_io.hh (absolute_tree_walker, walk_tree_absolute): New
+	interface (still needs implementing).
+
 2005-08-20  Petr Baudis  <pasky@suse.cz>
 	* git.cc: Support for incremental imports - when you pull new
 	stuff to your GIT repository, you can then re-run git_import
